# Rover_LabAuto

./: Presentazione LabAuto.pptx  README.md  labauto.pptx  labauto1.pptx
bbm/: CMakeLists.txt
bbm/src/: bbm_control_node.cpp  bbm_vision_node.cpp
code/: bbm_launch.yaml
code/bbm/: package.xml
code/bbm/src/: bbm_control_node.cpp  bbm_vision_node.cpp
code/bbm_interfaces/: CMakeLists.txt  package.xml
code/bbm_interfaces/msg/: Lineparams.msg
code/utils/: CMakeLists.txt  converter.cpp  failsafe.cpp  logger.cpp  package.xml
code/utils/src/: PID.cpp  complementaryFilter.cpp  complementaryfilter.cpp  converter.cpp  logger.cpp  pidtest.cpp  stop.cpp  velocitytest.cpp  writecsv.cpp
relazione/: main.tex
relazione/src/: Intro.tex  biblio.bib  concl.tex  desc_tec_veicolo.tex  impl.tex  prem_teo.tex  risultati.tex  title.tex
